# ecole-cpp-f

./: CMakeLists.txt  README.md
exo1/: my_class.h
td1/exo1/: main.cpp  main.h  my_class.cpp
td1/exo2/: Complex2D.cpp  Complex2D.h  Main.cpp
td2/exo1/: BinarySearch.cpp  BinarySearch.h  JumpSearch.cpp  JumpSearch.h  LinearSearch.cpp  LinearSearch.h  SearchingAlgorithm.cpp  SearchingAlgorithm.h  search_main.cpp
td2/exo2/: Matrix.h  MatrixNumerical.h  matrix.h  matrix_main.cpp  num_matrix.h
td3/exo1/: main.cpp
td3/exo2/: main.cpp
td3/exo3/: main.cpp
td4-pokemon/: card.cpp  energy_card.cpp  main.cpp  player.cpp  pokemon_card.cpp  trainer_card.cpp
td4-pokemon/headers/: card.h  energy_card.h  player.h  pokemon_card.h  trainer_card.h
td5/: GaussianGenerator.cpp  GaussianGenerator.h  SinWaveGenerator.cpp  SinWaveGenerator.h  StepGenerator.cpp  StepGenerator.h  TimeSeriesDataset.cpp  TimeSeriesDataset.h  TimeSeriesGenerator.cpp  TimeSeriesGenerator.h  main.cpp
